# d4bl_ai_agent

./: .coderabbit.yaml  .dockerignore  .env.example  .env.stakeholder.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  STAKEHOLDER_README.md  UI_NEXTJS_SETUP.md  UI_README.md  config.py  d4bl.py  data_analyst_agent.py  docker-compose.base.yml  docker-compose.crawl.yml  docker-compose.dagster.yml  docker-compose.firecrawl.yml  docker-compose.observability.yml  docker-compose.searxng.yml  docker-compose.stakeholder.yml  docker-compose.yml  firecrawl_search_test.py  fly.api.toml  fly.crawl4ai.toml  fly.dagster-daemon.toml  fly.dagster-web.toml  fly.frontend.toml  fly.searxng.toml  pyproject.toml  pytest.ini  requirements.txt  research_agent.py  ruff.toml  run_ui.py  setup_env.sh  test_firecrawl.sh  test_langfuse_tracing.py  web_scraper.py  (+1 more)
clickhouse/: cluster.xml
d4bl/: pyproject.toml
dagster/: Dockerfile  Dockerfile.daemon  auth_proxy.py  dagster.yaml  entrypoint.sh  requirements.txt  workspace.yaml
docs/: API.md  Architecture.md  CODE_SIMPLIFICATION_RESULTS.md  CONTENT_AND_REPORT_EVALUATIONS.md  CONTRIBUTING.md  DATABASE.md  DEVELOPMENT.md  DOCKER_COMPOSE_GUIDE.md  ERROR_HANDLING_AND_EVALS.md  FUTURE_WORK.md  Home.md  IMPROVING_RESULTS.md  Installation.md  LANGFUSE_SETUP.md  LANGFUSE_TESTING.md  OLLAMA_QUEUE_CONFIG.md  PHOENIX_EVALS.md  PHOENIX_EVALUATORS.md  PHOENIX_SETUP.md  PREREQUISITES.md  RESEARCH_DATA_REFERENCE.md  SIMPLIFICATION_REPORT.md  STAGING_SETUP.md  TROUBLESHOOTING.md  _config.yml  api-reference.md  index.md  (+2 more)
scripts/: init_db.py  (+16 more)
(+524 files in other folders)
